--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
     "main": {
         "title": "Diamond",
-        "shop": "Shop"
+        "stock": "Stock"
     },
     "language":{
         "english": "English",
