--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
     "main": {
         "title": "Diamant",
-        "shop": "Shop"
+        "shop": "Stock"
     },
     "language":{
         "english": "Anglais",
