--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,13 +1,16 @@
 {
     "main": {
         "title": "Diamond",
-        "stock": "Stock"
+        "stock": "Stock",
+        "name": "Name",
+        "actions" : "Actions"
     },
     "language":{
         "english": "English",
         "french": "French",
         "spanish": "Spanish",
-        "arabic": "Arabic"
+        "arabic": "Arabic",
+        "display" : "Display language"
     }
 }
    
