--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,6 +11,13 @@
         "spanish": "Espagnol",
         "arabic": "Arabe",
         "display": "langue d'affichage"
+    },
+    "category":{
+        "table":{
+            "id": "Id.",
+            "name": "Nom",
+            "actions": "Actions"
+        }
     }
 }
    
